--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">proyecto1raentrega</string>
+    <string name="buscar_por_titulo">Buscar por titulo</string>
+    <string name="ingresar_anio">Ingresar anio</string>
+    <string name="filtrar">Filtrar</string>
+    <string name="app_name">Mi Aplicacion de Peliculas</string>
 </resources>
