--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="ingresar_anio">Ingresar anio</string>
     <string name="filtrar">Filtrar</string>
     <string name="app_name">Mi Aplicacion de Peliculas</string>
+    <string name="t_tulo_de_la_pel_cula">Título de la Película</string>
+    <string name="fecha_de_estreno">Fecha de Estreno</string>
+    <string name="actores">Actores:</string>
 </resources>
