--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="t_tulo_de_la_pel_cula">Título de la Película</string>
     <string name="fecha_de_estreno">Fecha de Estreno</string>
     <string name="actores">Actores:</string>
+    <string name="mi_aplicaci_n">Mi Aplicación</string>
+    <string name="bienvenido">Bienvenido</string>
+    <string name="inicio">Películas Favoritas</string>
+    <string name="peliculas_ver">Películas para ver</string>
 </resources>
