Añadir boton para ocultar seccion de filtros

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,11 @@
     <string name="buscar_por_titulo">Buscar por titulo</string>
     <string name="ingresar_anio">Ingresar anio</string>
     <string name="filtrar">Filtrar</string>
-    <string name="app_name">Que ver</string>
+    <string name="app_name">Qver</string>
     <string name="t_tulo_de_la_pel_cula">Título de la Película</string>
     <string name="fecha_de_estreno">Fecha de Estreno</string>
     <string name="actores">Actores:</string>
-    <string name="mi_aplicaci_n">Que ver</string>
+    <string name="mi_aplicaci_n">Qver</string>
     <string name="bienvenido">Bienvenido</string>
     <string name="inicio">Películas Favoritas</string>
     <string name="peliculas_ver">Películas para ver</string>
