--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="buscar_por_titulo">Buscar por titulo</string>
-    <string name="ingresar_anio">Ingresar anio</string>
+    <string name="ingresar_anio">Ingresar año</string>
     <string name="filtrar">Filtrar</string>
     <string name="app_name">Qver</string>
     <string name="t_tulo_de_la_pel_cula">Título de la Película</string>
